[metadata]
name = sage_cluster_pictures
version = 1.0
description = Cluster pictures in SageMath
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU General Public License (GPL) v2 or later
author = Alex J. Best and Raymond van Bommel
author_email = alexjbest@gmail.com
url = https://github.com/alexjbest/cluster-pictures
keywords =
    numer theory

[options]
packages =
    sage_cluster_pictures

[options.extras_require]
passagemath =
    passagemath-combinat
    passagemath-graphs
    passagemath-modules
    passagemath-pari
    passagemath-plot
    passagemath-repl
    passagemath-schemes
    passagemath-symbolics
